--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h2 {
   font-family: "proxima-nova", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 2.5em;
   font-weight: 600;
+  outline: none;
   letter-spacing: 1px;
   line-height: 1.5em;
 }
