--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
+* {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-family: "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
 body {
-  background-color: #375585;
+  background-color: #47aed9;
 }
 
 body.vignette {
   position: relative;
   padding: 80px;
-  margin: 0;
+  padding: 180px 20%;
 }
 
 body.vignette:after {
-  -moz-box-shadow: inset 0 0 200px #312C2C;  
-  -webkit-box-shadow: inset 0 0 200px #312C2C;   
-  box-shadow: inset 0 0 200px #312C2C;
+  -moz-box-shadow: inset 0 0 200px rgba(0,0,0,.5);  
+  -webkit-box-shadow: inset 0 0 200px rgba(0,0,0,.5);    
+  box-shadow: inset 0 0 200px rgba(0,0,0,.5); 
   position: absolute;
   top: 0;
   left: 0;
@@ -42,14 +50,20 @@ canvas {
 
 }
 
-h2 {
-  margin: 0;
-  padding: 0;
-  color: white;
-  font-family: "proxima-nova", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 2.5em;
-  font-weight: 600;
+h1 {
+  opacity: 0.6;
+  font-size: 2em;
+  font-weight: 300;
   outline: none;
   letter-spacing: 1px;
-  line-height: 1.5em;
+  line-height: 150%;
+}
+
+h2 {
+  line-height: 150%;
+  font-size: 2em;
+  font-weight: 300;
+  outline: none;
+  letter-spacing: 1px;
+  line-height: 150%;
 }
