--- a/style.css
+++ b/style.css
@@ -3,11 +3,18 @@
   padding: 0;
   color: white;
   font-family: "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
+   
   -webkit-font-smoothing: antialiased;
 }
 
 body {
   background-color: #47aed9;
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 body.vignette {
